--- a/index.html
+++ b/index.html
@@ -9,20 +9,25 @@
   </head>
   <body>
     <!--logo-->
+    <img src="img/logo.png" alt="Logo" class="logo">
 
     <!--Buttons-->
-    <button class="btn"><img src="img/blue_t.png" alt="pants" class="imgBtn"></button>
+    <div class="buttons">
+       <button class="btn"><img src="img/blue_t.png" alt="pants" class="imgBtn"></button>
     <button class="btn"><img src="img/blue_p.png" alt="tshirt"class="imgBtn"></button>
     <button class="btn"><img src="img/blue_s.png" alt="skirt" class="imgBtn"></button>
     <button class="btn colorBtn blue">Blue</button>
     <button class="btn colorBtn yello">Yellow</button>
     <button class="btn colorBtn pink">Pink</button>
+    </div>
+   
     <!--Items-->
     <ul class="items">
       <li class="item">
-        <img src="img/blue_t.png" alt ="tshirt" class="item__thumnail">
+        <img src="img/blue_t.png" alt ="tshirt" class="item__thumbnail">
         <span class="item__description">male, large</span>
       </li>
+      
     </ul>
   </body>
 </html>
