--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
     <!--Buttons-->
     <div class="buttons">
-       <button class="btn"><img src="img/blue_t.png" alt="pants" class="imgBtn"></button>
-    <button class="btn"><img src="img/blue_p.png" alt="tshirt"class="imgBtn"></button>
-    <button class="btn"><img src="img/blue_s.png" alt="skirt" class="imgBtn"></button>
-    <button class="btn colorBtn blue">Blue</button>
-    <button class="btn colorBtn yello">Yellow</button>
-    <button class="btn colorBtn pink">Pink</button>
+       <button class="btn"><img src="img/blue_t.png" alt="pants" class="imgBtn" data-key="type" data-value="tshirt"></button>
+    <button class="btn"><img src="img/blue_p.png" alt="tshirt"class="imgBtn" data-key="type" data-value="patns"></button>
+    <button class="btn"><img src="img/blue_s.png" alt="skirt" class="imgBtn" data-key="type" data-value="shirt"></button>
+    <button class="btn colorBtn blue" data-key="color" data-value="blue">Blue</button>
+    <button class="btn colorBtn yello" data-key="color" data-value="yellow">Yellow</button>
+    <button class="btn colorBtn pink" data-key="color" data-value="pink">Pink</button>
     </div>
    
     <!--Items-->
